# CHPS802_TP

./: GoogleTest.ipynb  README.md
TP01/: TP01 - Compte rendu.docx  tp1_cuda.ipynb
TP01/Ressources/: CMakeLists.txt
TP01/Ressources TP1-20250114/: prac1a.cu  prac1b.cu  prac1c.cu  test.cu
TP01/Ressources TP1-20250114/src/: prac_test.cu
TP02/: tp2_MonteCarlo_CALDERON.ipynb
TP02/Ressources/: CMakeLists.txt  prac2_device.cu
TP02/Ressources/src/: prac2_1.cu  prac2_2.cu  prac2_average.cu  prac2_average_test.cu  prac2_device.cu
TP03/: GITHUB_LINK_CR.txt  README.md
TP03/Ressources/: CMakeLists.txt
TP03/Ressources/src/: laplace3d.cu  laplace3d_gold.cpp  laplace3d_new.cu  laplace3d_test.cu
TP04/: README.md
TP04/Ressources/: CMakeLists.txt
TP04/Ressources/src/: reduction_adaptative.cu  reduction_multiblock.cu  reduction_shuffle.cu  reduction_test.cu
include/: helper_functions.h
